# BlockGame

./: .gitignore  BlockGame.sln  CMakeLists.txt  README.md  collision_optimisation_idea.txt
Assets/: mesh.frag  mesh.vert
BlockGame/: BlockGame.vcxproj  BlockGame.vcxproj.filters  cameraComponent.cpp  cameraComponent.h  chunk.cpp  chunk.h  collisionDetection.cpp  collisionDetection.h  component.cpp  component.h  entity.cpp  entity.h  freeFormController.cpp  freeFormController.h  frustum.cpp  frustum.h  game.cpp  game.h  image.cpp  image.h  imgui.ini  main.cpp  mesh.cpp  mesh.h  meshComponent.cpp  meshComponent.h  meshTypes.h  playerController.cpp  playerController.h  resource.h  shader.cpp  shader.h  texture.cpp  texture.h  transformComponent.cpp  transformComponent.h  worker.cpp  worker.h  world.cpp  world.h
BlockGame/Assets/: image.frag  image.vert  mesh.frag  mesh.vert
src/: cameraComponent.cpp  chunk.cpp  chunk.h  collisionBoxComponent.cpp  collisionBoxComponent.h  collisionDetection.cpp  component.cpp  component.h  entity.cpp  freeFormController.h  game.cpp  game.h  light.h  logging.h  mesh.h  meshComponent.cpp  meshTypes.h  playerController.cpp  playerController.h  shader.cpp  shader.h  terrain.cpp  terrain.h  texture.cpp  texture.h  transformComponent.cpp  transformComponent.h  world.cpp  world.h
